<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View"/>


    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_image"
                android:layout_width="@dimen/image_large_size"
                android:layout_height="@dimen/image_large_size"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_userpic"/>

            <TextView
                android:id="@+id/btn_choose_image"
                style="@style/BorderlessBtn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:text="@string/btn_choose_image"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/et_name"
            style="@style/EditTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/et_hint_name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/et_email"
            style="@style/EditTextSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/et_hint_email"
            android:inputType="textEmailAddress"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="62dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_language"
                        android:textColor="@color/black_text"/>

                    <TextView
                        android:id="@+id/tv_current_language"
                        style="@style/AppTheme.TextCardItemSecondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="English"
                        />
                </LinearLayout>


                <TextView
                    android:id="@+id/tv_language_action"
                    style="@style/BorderlessBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_height"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="@string/btn_choose_language"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_facebook_link"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/shape_facebook_translucent"
                    android:padding="8dp"
                    android:src="@drawable/ic_facebook"/>

                <TextView
                    android:id="@+id/tv_facebook_link_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="18dp"
                    android:layout_weight="1"
                    android:text="@string/text_facebook"/>

                <TextView
                    android:id="@+id/tv_facebook_link_action"
                    style="@style/BorderlessBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_height"
                    android:layout_gravity="center_vertical"
                    android:gravity="end|center_vertical"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="@string/btn_connect"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_twitter_link"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/shape_twitter_translucent"
                    android:padding="8dp"
                    android:src="@drawable/ic_twitter"/>

                <TextView
                    android:id="@+id/tv_twitter_link_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="18dp"
                    android:layout_weight="1"
                    android:text="@string/text_twitter"/>

                <TextView
                    android:id="@+id/tv_twitter_link_action"
                    style="@style/BorderlessBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_height"
                    android:layout_gravity="center_vertical"
                    android:gravity="end|center_vertical"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="@string/btn_connect"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_gp_link"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/shape_gp_translucent"
                    android:padding="8dp"
                    android:src="@drawable/btn_google_light_normal"/>

                <TextView
                    android:id="@+id/tv_gp_link_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="18dp"
                    android:layout_weight="1"
                    android:text="@string/text_gp"/>

                <TextView
                    android:id="@+id/tv_gp_link_action"
                    style="@style/BorderlessBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_height"
                    android:layout_gravity="center_vertical"
                    android:gravity="end|center_vertical"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="@string/btn_connect"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</layout>

